# spark_log_parser

./: .gitignore  README.md  exec.py  makefile  parse.py  parse.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: makefile.yml  pull-request.yml
parsing_models/: application_model.py  application_model_v2.py  dag_model.py  executor_model.py  stage_model.py  task_model.py  utility.py  validation_configs.py  validation_event_data.py
spark_log_parser/: __init__.py  __main__.py  cli.py  eventlog.py  extractor.py
spark_log_parser/loaders/: __init__.py  https.py  json.py  local_file.py  s3.py
spark_log_parser/parsing_models/: application_model.py  application_model_v2.py  dag_model.py  errors.py  exceptions.py  executor_model.py  job_model.py  stage_model.py  task_model.py  utility.py  validation_configs.py  validation_event_data.py
sync_parser/: application_model.py  application_model_prev.py  parse.py
tests/: __init__.py  conftest.py  test_bad_eventlog.py  test_eventlog.py  test_eventlog_s3.py  test_parse.py  test_parse_https.py  test_parse_local.py  test_parse_s3.py
tests/loaders/: test_archive_file_streams_consumed.py  test_archive_size_assertions.py
tests/logs/: databricks-parsed.json
tests/logs/bad/: duplicate-part.tgz
