[build-system]
requires = ["flit >=3.2,<4"]
build-backend = "flit.buildapi"

[project]
name = "spark_log_parser"
authors = [{"name" = "Sync Computing"}]
readme = "README.md"
requires-python = ">=3.10.3"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "boto3==1.20.24",
    "numpy==1.21.4",
    "pandas==1.5.2",
    "orjson==3.8.3",
    "stream-unzip==0.0.70",
    "pydantic==1.9.0",
    "requests==2.26.0",
    "aiodataloader==0.2.1"
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest==7.1.2",
    "pytest-mock==3.10.0",
    "requests-mock==1.9.3",
    "deepdiff==6.2.1",
    "black==22.6.0",
    "isort==5.10.1",
    "flake8==4.0.1",
]

[project.scripts]
spark-log-parser = "spark_log_parser.cli:main"

[project.urls]
Home = "https://github.com/synccomputingcode/spark_log_parser"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = [
    "."
]
filterwarnings = [
    "ignore::UserWarning"
]
