[build-system]
requires = ["flit >=3.2,<4"]
build-backend = "flit.buildapi"

[project]
name = "spark_log_parser"
authors = [{"name" = "Sync Computing"}]
readme = "README.md"
requires-python = ">=3.10.3"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "boto3==1.26.41",
    "numpy==1.24.1",
    "pandas==1.5.2",
    "ujson==5.6.0",
    "pydantic==1.10.4",
    "requests==2.28.1",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest==7.2.0",
    "black==22.12.0",
    "isort==5.11.4",
    "flake8==6.0.0",
]

[project.scripts]
spark-log-parser = "spark_log_parser.cli:main"

[project.urls]
Home = "https://github.com/synccomputingcode/spark_log_parser"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = [
    "."
]
filterwarnings = [
    "ignore::UserWarning"
]
